# bouguera_sport

./: audit_ui_ux.md  checklist_salle_de_sport.md  role_management_checklist.md  v2_checklist_app_builder.md
.windsurf/: cleanup_skills.ps1  cleanup_skills_aggressive.ps1  skills_list.txt
backend/: .env  .env.example  Cargo.toml
backend/src/: config.rs  handlers.rs  main.rs  middlewares.rs  models.rs  routes.rs  services.rs
backend/src/middleware/: auth.rs  mod.rs
frontend/: apply-brutalism.js  checklist.md  checklist_crud.md  checklist_frontend.md  package-lock.json  package.json  replace-colors.js  vitest.config.mts
frontend/convex/: auth.config.ts  auth.ts  coaches.ts  cron.ts  crons.ts  dashboard.ts  disciplines.ts  families.ts  files.ts  members.ts  mutations.ts  payments.ts  schema.ts  seed.ts  sessions.ts  settings.ts  users.ts
frontend/convex/_generated/: api.d.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/coaches/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/disciplines/: page.tsx
frontend/src/app/expenses/: page.tsx
frontend/src/components/: Avatar.tsx  ConfirmModal.tsx  DataTable.tsx  DropdownMenu.tsx  EmptyState.tsx  FormComponents.tsx  FormInput.tsx  FormModal.tsx  FormSelect.tsx  MediaUploader.tsx  PageHeader.tsx  ReceiptPDF.tsx  SearchInput.tsx  Skeleton.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useUserRole.ts
frontend/src/lib/: export.ts  lookups.ts  navigation.ts
frontend/src/schemas/: index.ts
frontend/src/test/: setup.ts
(+50 files in other folders)
